tdf#159581 sc: fix multi-sheet ScDocRowHeightUpdater

Apparently it was caching the first sheet's
row height, and applying it to every other sheet.

AFAICS, the only time this ever ran against multiple sheets
was during import time, so that is why it wasn't easily noticed
before 24.2 when XLSX started using it on import.

make CppunitTest_sc_subsequent_filters_test2 \
    CPPUNIT_TEST_NAME=testTdf159581_optimalRowHeight

Change-Id: Ic4e4dd335fa48d02acbc85cfad35feb8eca7597b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163066
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 9778d499df3d081314295ae099463870146b7a9c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163027